    - Git branch selection
  * Added safety features:
    - Automatic config backups with timestamps
    - Dry run mode to preview changes
    - Config verification
    - Backup restoration on error
  * Improved config file location handling with proper priority order
  * Updated post-install message with more features and colorized output
  * Added RPM package support for CentOS/RHEL systems

 -- Josh Finlay <josh@athenanetworks.com.au>  Thu, 07 Feb 2025 11:07:03 +1000

ssh-commander (1.0.29) unstable; urgency=medium

  * Improved dependency checking in install scripts
  * Added better dependency documentation
  * Fixed SSH key path expansion
  * Removed debug print statement
  * Added note about apt -f install for dependency resolution

 -- Josh Finlay <josh@athenanetworks.com.au>  Thu, 07 Feb 2025 10:56:24 +1000

ssh-commander (1.0.28) unstable; urgency=medium

  * Added server tags functionality
  * Added --tags option for filtering commands by server tags
  * Improved config file handling with priority-based loading
  * Added --config argument for custom config file location
  * Updated documentation with new features

 -- Josh Finlay <josh@athenanetworks.com.au>  Thu, 07 Feb 2025 10:34:42 +1000

ssh-commander (1.0.27) unstable; urgency=medium

  * Removed home directory storage requirement
  * Updated installation scripts
  * Changed default config location to ~/.config/ssh-commander
  * Added strong security warning about password storage
  * Fixed config path handling in add_server command

 -- Josh Finlay <josh@athenanetworks.com.au>  Thu, 07 Feb 2025 10:00:00 +1000

ssh-commander (1.0.26-1.0.24) unstable; urgency=medium

  * Added automatic config file creation when adding first server
  * Added SHA256 checksum generation for .deb file
  * Updated to Python 3.8 for better GLIBC compatibility
  * Fixed config file installation
  * Added postinst script
  * Fixed binary installation path and name